manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
spec:
  selector:
    matchLabels:
      app: http
  replicas: 3
  template:
    metadata:
      labels:
        app: http
    spec:
      containers:
      - name: http-server
        image: valeriaverboloz/http_server:0.1
        ports:
        - containerPort: 80
