manifests/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-service
  labels:
    app: http
spec:
  selector:
    app: http
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: http-service
          servicePort: 8080
